# bluetooth-classic

./: Cargo.toml  readme.md
scripts/: connected.txt  dump.json  get-bluetooth-battery-all.ps1  get-bluetooth-battery.ps1  last.txt
src/: bluetooth.rs  bluetooth_classic.rs  main.rs
